Fixed minor layout issue with smart-accordion

--- a/sass/components/smart/accordion/_smart-accordion.scss
+++ b/sass/components/smart/accordion/_smart-accordion.scss
@@ -23,7 +23,7 @@
 /// @example html - Expanded
 ///   <button class="smart-accordion--toggle is-expanded">Click to expand</button>
 .smart-accordion--toggle {
-  padding: 5px 20px;
+  padding: 5px 35px 5px 20px;
   position: relative;
   z-index: 20;
   display: block;
